--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -33,7 +33,7 @@ metadata:
   labels:
     app: systemadmintest
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
     - name: http
       port: 80
