--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -54,7 +54,7 @@ spec:
     - host: "systemadmintest.test"  # เปลี่ยน host ตามที่ต้องการ
       http:
         paths:
-          - path: /dashboard
+          - path: /
             pathType: Prefix
             backend:
               service:
