--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: systemadmintest
-        image: myapp:latest
+        image: <your_docker_image> # ใส่ URL ของ Docker Image ที่สร้างขึ้น
         ports:
         - containerPort: 80
 
@@ -45,16 +45,17 @@ metadata:
   name: systemadmintest-ingress
   namespace: systemadmintest
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: "nginx"  # ปรับปรุงให้ใช้ ingressClassName แทน
 spec:
+  ingressClassName: "nginx"  # เพิ่มการตั้งค่านี้
   rules:
-  - host: systemadmintest.test
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: systemadmintest-svc
-            port:
-              number: 80
+    - host: systemadmintest.test
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: systemadmintest-svc
+                port:
+                  number: 80
