--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -47,15 +47,15 @@ spec:
   selector:
     app: systemadmintest
 ---
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
   name: systemadmintest-ingress
   namespace: systemadmintest
   annotations:
-    kubernetes.io/ingress.class: "nginx"  # ปรับปรุงให้ใช้ ingressClassName แทน
+    kubernetes.io/ingress.class: "nginx"
 spec:
-  ingressClassName: "nginx"  # เพิ่มการตั้งค่านี้
+  ingressClassName: "nginx"  # Use ingress class explicitly
   rules:
     - host: systemadmintest.test
       http:
