--- a/systemadmintest/config.yaml
+++ b/systemadmintest/config.yaml
@@ -2,11 +2,13 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: my-nginx-content
-  namespace: default
 data:
-  index.html: |
-    <html>
-      <body>
-        <h1>Hello, Nginx!</h1>
-      </body>
-    </html>
+  nginx-content.conf: |
+    server {
+        listen 80;
+        location / {
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+        }
+    }
+
