--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,23 @@
-server {
-    listen 80;
+worker_processes auto;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;  # จัดการกับ Routing ของ Vue.js
+events {
+    worker_connections 1024;
+}
+
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    sendfile on;
+    keepalive_timeout 65;
+
+    server {
+        listen 80;
+
+        location / {
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html;  # จัดการกับ Routing ของ Vue.js
+        }
     }
 }
