--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -6,10 +6,12 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: systemadmintest-deploy
+  name: systemadmintest
   namespace: systemadmintest
+  labels:
+    app: systemadmintest
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: systemadmintest
@@ -19,33 +21,32 @@ spec:
         app: systemadmintest
     spec:
       containers:
-        - name: nginx
-          image: nginx:latest
-          volumeMounts:
-            - name: nginx-content
-              mountPath: /usr/share/nginx/html
+      - name: crud-container
+        image: node:14-alpine
+        ports:
+        - containerPort: 3000
+        volumeMounts:
+        - name: crud-source
+          mountPath: /app
+        command: ["npm", "start"]
       volumes:
-        - name: nginx-content
-          configMap:
-            name: my-nginx-content
-
+      - name: crud-source
+        emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: systemadmintest-svc
+  name: systemadmintest-service
   namespace: systemadmintest
-  labels:
-    app: systemadmintest
 spec:
-  type: NodePort
-  ports:
-    - name: http
-      port: 80
-      targetPort: 80
-      protocol: TCP
   selector:
     app: systemadmintest
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 3000
+  type: LoadBalancer
+
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -67,5 +68,25 @@ spec:
                 name: systemadmintest-svc
                 port:
                   number: 80
+
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: systemadmintest
+  namespace: systemadmintest
+spec:
+  project: default
+  source:
+    repoURL: 'https://github.com/PekoyamaPeko02/SystemAdminTest02.git'
+    targetRevision: HEAD
+    path: manifests
+  destination:
+    server: 'https://kubernetes.default.svc'
+    namespace: default
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+
 
 
