--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -46,7 +46,6 @@ spec:
     port: 80
     targetPort: 3000
   type: LoadBalancer
-
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -65,15 +64,15 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: systemadmintest-svc
+                name: systemadmintest-service
                 port:
                   number: 80
-
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: systemadmintest
-  namespace: systemadmintest
+  namespace: argocd  # เปลี่ยน namespace ของ Argo CD เป็น argocd
 spec:
   project: default
   source:
@@ -82,11 +81,8 @@ spec:
     path: manifests
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: default
+    namespace: systemadmintest  # เปลี่ยน namespace ให้ตรงกับแอปพลิเคชัน
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
-
-
-
