--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: crud-container
-        image: node:14-alpine
+        image: systemadmintest
         ports:
         - containerPort: 3000
         command: ["npm", "start"]
