--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -40,7 +40,8 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 80
-  type: NodePort
+    nodePort: 30127
+  type: LoadBalancer
 
 ---
 apiVersion: networking.k8s.io/v1
