--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -41,7 +41,7 @@ spec:
     port: 80
     targetPort: 80
     nodePort: 30127
-  type: LoadBalancer
+  type: NodePort
 
 ---
 apiVersion: networking.k8s.io/v1
