--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -69,7 +69,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: systemadmintest
-  namespace: argocd  # เปลี่ยน namespace ของ Argo CD เป็น argocd
+  namespace: systemadmintest
 spec:
   project: default
   source:
