--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -44,26 +44,26 @@ spec:
   type: NodePort
 
 ---
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: systemadmintest-ingress
-  namespace: systemadmintest
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-spec:
-  ingressClassName: "nginx"  # Use ingress class explicitly
-  rules:
-    - host: systemadmintest.test
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: systemadmintest-service
-                port:
-                  number: 80
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: systemadmintest-ingress
+#   namespace: systemadmintest
+#   annotations:
+#     kubernetes.io/ingress.class: "nginx"
+# spec:
+#   ingressClassName: "nginx"  # Use ingress class explicitly
+#   rules:
+#     - host: systemadmintest.test
+#       http:
+#         paths:
+#           - path: /
+#             pathType: Prefix
+#             backend:
+#               service:
+#                 name: systemadmintest-service
+#                 port:
+#                   number: 80
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
