--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -25,8 +25,6 @@ spec:
         image: systemadmintest:latest
         ports:
         - containerPort: 80
-
-
 ---
 apiVersion: v1
 kind: Service
@@ -42,8 +40,8 @@ spec:
     targetPort: 80
     nodePort: 30127
   type: NodePort
-
 ---
+# Uncomment the following section to enable Ingress if required
 # apiVersion: networking.k8s.io/v1
 # kind: Ingress
 # metadata:
@@ -52,7 +50,7 @@ spec:
 #   annotations:
 #     kubernetes.io/ingress.class: "nginx"
 # spec:
-#   ingressClassName: "nginx"  # Use ingress class explicitly
+#   ingressClassName: "nginx"
 #   rules:
 #     - host: systemadmintest.test
 #       http:
@@ -78,7 +76,7 @@ spec:
     path: systemadmintest/systemadmintest
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: systemadmintest  # เปลี่ยน namespace ให้ตรงกับแอปพลิเคชัน
+    namespace: systemadmintest
   syncPolicy:
     automated:
       prune: true
