--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -7,7 +7,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: systemadmintest
-  namespace: systemadmintest01
+  namespace: systemadmintest
   labels:
     app: systemadmintest
 spec:
@@ -25,12 +25,14 @@ spec:
         image: systemadmintest:latest
         ports:
         - containerPort: 80
+
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: systemadmintest-service
-  namespace: systemadmintest01
+  namespace: systemadmintest
 spec:
   selector:
     app: systemadmintest
@@ -40,8 +42,8 @@ spec:
     targetPort: 80
     nodePort: 30127
   type: NodePort
+
 ---
-# Uncomment the following section to enable Ingress if required
 # apiVersion: networking.k8s.io/v1
 # kind: Ingress
 # metadata:
@@ -50,7 +52,7 @@ spec:
 #   annotations:
 #     kubernetes.io/ingress.class: "nginx"
 # spec:
-#   ingressClassName: "nginx"
+#   ingressClassName: "nginx"  # Use ingress class explicitly
 #   rules:
 #     - host: systemadmintest.test
 #       http:
@@ -67,7 +69,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: systemadmintest
-  namespace: systemadmintest01
+  namespace: systemadmintest
 spec:
   project: default
   source:
@@ -76,7 +78,7 @@ spec:
     path: systemadmintest/systemadmintest
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: systemadmintest01
+    namespace: systemadmintest  # เปลี่ยน namespace ให้ตรงกับแอปพลิเคชัน
   syncPolicy:
     automated:
       prune: true
