--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -7,7 +7,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: systemadmintest
-  namespace: systemadmintest
+  namespace: systemadmin
   labels:
     app: systemadmintest
 spec:
@@ -32,7 +32,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: systemadmintest-service
-  namespace: systemadmintest
+  namespace: systemadmin
 spec:
   selector:
     app: systemadmintest
@@ -69,7 +69,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: systemadmintest
-  namespace: systemadmintest
+  namespace: systemadmin
 spec:
   project: default
   source:
@@ -78,7 +78,7 @@ spec:
     path: systemadmintest/systemadmintest
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: systemadmintest  # เปลี่ยน namespace ให้ตรงกับแอปพลิเคชัน
+    namespace: systemadmin  # เปลี่ยน namespace ให้ตรงกับแอปพลิเคชัน
   syncPolicy:
     automated:
       prune: true
