--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: systemadmintest
+  name: systemadmin
 ---
 apiVersion: apps/v1
 kind: Deployment
