--- a/systemadmintest/systemadmintest.yaml
+++ b/systemadmintest/systemadmintest.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: crud-container
-        image: argoproj/argo:latest
+        image: myapp/argo:latest
         ports:
         - containerPort: 80
 
